style: set main div height explicitly to avoid cumulative layout shift

--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -1,6 +1,8 @@
 .main {
   flex-grow: 1;
   width: 100%;
+  min-height: 1000px; /* Set a minimum height */
+  height: auto; /* Allow dynamic content */
 
   @media (max-width: 600px) {
     margin-top: 100px;
